# lane_following

./: .gitignore  CMakeLists.txt  Lane_pipeline_mode.cpp  Package.xml  README.md  extract_frames.py  lane_gui.py  package.xml  run_all.sh
docs/: AGENT_CONTEXT.md  ARCHITECTURE.md  BEV_HOMOGRAPHY_GUIDE.md  CALIBRATION.md  COORDINATES.md  INTERFACES.md  PIPELINE.md
include/lane_detection/: bev_transformer.hpp  error_calculator.hpp  lane_tracker.hpp  preprocessor.hpp  sliding_window.hpp  types.hpp
src/: bev_transformer.cpp  error_calculator.cpp  lane_pipeline_node.cpp  lane_tracker.cpp  main.cpp  preprocessor.cpp  sliding_window.cpp
src/pipeline/: lane_pipeline_node.cpp
src/pipeline/stages/: 01_params_and_init.cpp  02_frame_source.cpp  03_preprocess_hls.cpp  04_bev_transform.cpp  05_sliding_window.cpp  06_temporal_filter.cpp  07_errors_mpc.cpp  08_debug_publish.cpp
tools/: bev.py
